Fix login button alignment

--- a/flask_project/campaign_manager/styles/_header.scss
+++ b/flask_project/campaign_manager/styles/_header.scss
@@ -68,7 +68,7 @@
   }
   .navbar-nav>li {
     margin: 0 20px;
-    &:last-child {
+    &:last-child, &#login-button {
       margin-right: 0;
     }
     >a:not(.btn) {
